--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "name": "ONS Digital"
   },
   "scripts": {
-    "build": "rollup -c"
+    "clean": "rm -rf dist",
+    "build": "rollup -c",
+    "build-docs": "typedoc --entryPoints src/index.ts --json ./dist/docs.json"
   },
   "browserslist": [
     "last 2 versions",
@@ -30,6 +32,7 @@
     "react-dom": "^18.2.0",
     "rollup": "^3.10.0",
     "rollup-plugin-typescript2": "^0.34.1",
+    "typedoc": "^0.23.24",
     "typescript": "^4.9.4"
   },
   "dependencies": {
