--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:styles": "node ./scripts/build-styles.js",
     "clean": "rm -rf dist",
     "start": "yarn build:styles && yarn build:examples && yarn start:dev-server",
-    "start:dev-server": "node ./lib/dev-server"
+    "start:dev-server": "node ./lib/dev-server",
+    "test": "jest"
   },
   "browserslist": [
     "last 2 versions",
@@ -32,18 +33,21 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.3.0",
     "@svgr/rollup": "^6.5.1",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "glob": "^8.1.0",
+    "jest": "^29.4.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.10.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.57.1",
+    "ts-jest": "^29.0.5",
     "typedoc": "^0.23.24",
     "typescript": "^4.9.4"
   },
