--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.3.0",
     "@svgr/rollup": "^6.5.1",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
@@ -41,6 +42,7 @@
     "express": "^4.18.2",
     "glob": "^8.1.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
