--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "export NODE_ENV=production; yarn clean && yarn build:docs && yarn build:styles && yarn build:examples",
     "build:docs": "typedoc --entryPoints src/index.ts --json ./dist/docs.json",
     "build:examples": "yarn build:examples:refresh && rollup -c rollup.config.examples.js",
-    "build:examples:refresh": "node ./scripts/refresh-example-components.js",
+    "build:examples:refresh": "ts-node ./scripts/refresh-example-components",
     "build:styles": "node ./scripts/build-styles.js",
     "clean": "rm -rf dist",
     "start": "yarn build:styles && yarn build:examples && yarn start:dev-server",
@@ -34,12 +34,15 @@
     "@rollup/plugin-terser": "^0.3.0",
     "@svgr/rollup": "^6.5.1",
     "@testing-library/react": "^13.4.0",
+    "@types/fs-extra": "^11.0.1",
+    "@types/glob": "^8.0.1",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.0",
     "glob": "^8.1.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
@@ -50,6 +53,7 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.57.1",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typedoc": "^0.23.24",
     "typescript": "^4.9.4"
   },
