--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,13 @@
 {
+  "ts-node": {
+    // https://github.com/TypeStrong/ts-node/discussions/1781#discussioncomment-4677258
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+
   "compilerOptions": {
     "rootDir": "src",
-    "target": "ES2015",
+    "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react-jsx",
@@ -17,5 +23,7 @@
     "src/**/*.ts",
     "src/**/*.tsx"
   ],
-  "files": ["./typings.d.ts"]
+  "files": [
+    "./typings.d.ts"
+  ]
 }
