Add '@testing-library/jest-dom' package to facilitate testing.

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,10 +1,13 @@
 {
+  "setupFilesAfterEnv": [
+    "@testing-library/jest-dom"
+  ],
   "verbose": true,
   "testEnvironment": "jsdom",
   "transform": {
     ".(ts|tsx)": "ts-jest"
   },
-  "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+  "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
   "moduleFileExtensions": [
     "ts",
     "tsx",
