--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.3.0",
     "@svgr/rollup": "^6.5.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
