--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -15,11 +15,11 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
       - name: Get version from package.json
         id: get-version
-        run: echo "::set-env name=PACKAGE_VERSION::$(jq -r '.version' package.json)"
+        run: echo "PACKAGE_VERSION::$(jq -r '.version' package.json)" >> $GITHUB_ENV
         
       - name: Get current version from main branch
         id: get-current-version
