--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -23,7 +23,7 @@ jobs:
         
       - name: Get current version from main branch
         id: get-current-version
-        run: echo "::set-env name=CURRENT_VERSION::$(curl -s https://raw.githubusercontent.com/ONSdigital/design-system-react/main/package.json | jq -r '.version')"
+        run: echo "CURRENT_VERSION=$(curl -s https://raw.githubusercontent.com/ONSdigital/design-system-react/main/package.json | jq -r '.version')" >> $GITHUB_ENV
         
       - name: Compare versions
         if: env.PACKAGE_VERSION == env.CURRENT_VERSION
