--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Replace version in readme.md
         run: sed -i "s/\(https:\/\/github.com\/ONSdigital\/design-system-react#\)v[0-9]\.[0-9]\.[0-9]/\1${{ env.PACKAGE_VERSION }}/g" README.md
       
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: '14'
       - name: Install dependencies
@@ -46,7 +46,6 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Build package for ${{ env.PACKAGE_VERSION }}"
-          push: true
           
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
@@ -54,6 +53,6 @@ jobs:
           title: "Create release - v${{ env.PACKAGE_VERSION }}"
           body: "This PR includes changes for the release v${{ env.PACKAGE_VERSION }}."
           labels: "release"
-          head: ${{ env.BRANCH_NAME }}
+          branch: ${{ env.BRANCH_NAME }}
           base: main
           
