Correct the branch name when creating a PR

--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -50,6 +50,6 @@ jobs:
           title: "Create release - v${{ env.PACKAGE_VERSION }}"
           body: "This PR includes changes for the release v${{ env.PACKAGE_VERSION }}."
           labels: "release"
-          branch: create-release
+          branch: create/release
           base: main
           
