--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -13,8 +13,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          ref: create/release
         
       - name: Get version from package.json
         id: get-version
@@ -41,25 +39,14 @@ jobs:
       - name: Run yarn build-package
         run: yarn build-package
           
-      - name: Push changes to branch
-        uses: actions/github-script@v3
-        env:
-          PACKAGE_VERSION: ${{ env.PACKAGE_VERSION }}
-        with:
-          script: |
-            #!/bin/sh
+      - name: Save changes and push to create/release branch
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "Build release - v${{ env.PACKAGE_VERSION }}"
+          git push origin HEAD:create/release
 
-            set -e
-
-            BRANCH_NAME=create/release
-
-            git config --global user.email "github-actions@github.com"
-            git config --global user.name "GitHub Actions"
-
-            git add .
-            git commit -m "Create release - v$PACKAGE_VERSION"
-
-            git push origin $BRANCH_NAME
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
