--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -46,5 +46,5 @@ jobs:
           body: "This PR includes changes for the release v${{ env.PACKAGE_VERSION }}."
           labels: "release"
           branch: "create/release"
-          suffix: "random"
+          branch-suffix: "random"
           base: "main"
