--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -40,11 +40,11 @@ jobs:
         run: yarn build-package
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+        uses: devops-infra/action-pull-request@v0.5.3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          source_branch: create/release
+          target_branch: main
           title: "Create release - v${{ env.PACKAGE_VERSION }}"
           body: "This PR includes changes for the release v${{ env.PACKAGE_VERSION }}."
-          labels: "release"
-          branch: "create/release"
-          branch-suffix: "random"
-          base: "main"
+          label: release
