--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -12,16 +12,10 @@ env:
 jobs:
   merge_pr:
     name: Merge PR to main
+    if: ${{ github.event.label.name == 'release' }}
     runs-on: ubuntu-latest
     steps:
-      - name: Check if label "release" is present
-        id: check_label
-        uses: actions/bin/filter@v1
-        with:
-          args: label release
-          pull_request: ${{ env.PULL_REQUEST }}
       - name: Create tag and release
-        if: steps.check_label.outputs.result == 'true'
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -33,4 +27,3 @@ jobs:
           prerelease: false
           body: |
             $(cat .github/release.yml)
-
