add dependency for build to finish before pr runs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
       - create/release
 
 jobs:
-  build:
+  build_package:
     name: Build package and update version
     runs-on: ubuntu-latest
     
