--- a/.github/workflows/create-pr.yml
+++ b/.github/workflows/create-pr.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   create_release_pr:
+    needs: build_package
     if: contains(github.event.head_commit.message, 'Build release')
     runs-on: ubuntu-latest
 
