--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and create release PR
 
 on:
   push:
@@ -46,3 +46,21 @@ jobs:
           git add .
           git commit -m "Build release - v${{ env.PACKAGE_VERSION }}"
           git push origin HEAD:create/release
+
+  create_release_pr:
+    name: Create release PR
+    runs-on: ubuntu-latest
+    needs: build_package
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit-message: "Create release PR"
+        branch: create/release
+        base: main
+        title: "Build release - v${{ env.PACKAGE_VERSION }}"
+        labels: "release"
