--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -52,16 +52,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_package
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "Create release PR"
-        branch: create/release
-        branch-suffix: random
-        base: main
-        title: "Build release - v${{ env.PACKAGE_VERSION }}"
-        labels: "release"
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+      - name: Reset promotion branch
+        run: |
+          git fetch origin create/release
+          git reset --hard create/release
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Create release PR"
+          branch: create/release-pr
+          base: main
+          title: "Build release - v${{ env.PACKAGE_VERSION }}"
+          labels: "release"
