--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -64,7 +64,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
+      with:
+       ref: ${{ github.head_ref }}
     - name: Update package version
       run: |
         echo "Updating package version to ${PACKAGE_VERSION}"
@@ -76,4 +77,4 @@ jobs:
       with:
         commit_message: "Update package version to ${PACKAGE_VERSION}"
         branch: create/release
-        push: true
+        push_options: '--force'
