--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -1,4 +1,4 @@
-name: Build and create release PR
+name: Build Release
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - create/release
 
 jobs:
-  build_package:
-    name: Build package and update version
+  create-pr:
+    name: Create PR
     runs-on: ubuntu-latest
     
     steps:
@@ -38,43 +38,12 @@ jobs:
         run: yarn install
       - name: Run yarn build-package
         run: yarn build-package
-
-  create_release_pr:
-    name: Create release PR
-    runs-on: ubuntu-latest
-    needs: build_package
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "Create release PR"
-        branch: create/release
-        base: main
-        title: "Build release - v${{ env.PACKAGE_VERSION }}"
-        labels: "release"
-  
-  update_package_version:
-    name: Update package.json version
-    runs-on: ubuntu-latest
-    needs: create_release_pr
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-       ref: ${{ github.head_ref }}
-    - name: Update package version
-      run: |
-        echo "Updating package version to ${PACKAGE_VERSION}"
-        jq ".version = \"${PACKAGE_VERSION}\"" package.json > package.json.tmp
-        mv package.json.tmp package.json
-
-    - name: Commit changes
-      uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        commit_message: "Update package version to ${PACKAGE_VERSION}"
-        branch: create/release
-        push_options: '--force'
+          
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          title: "Create release - v${{ env.PACKAGE_VERSION }}"
+          body: "This PR includes changes for the release v${{ env.PACKAGE_VERSION }}."
+          labels: "release"
+          branch: "create/release"
+          base: "main"
