--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -78,6 +78,6 @@ jobs:
         git commit -m "Update package.json to version $PACKAGE_VERSION"
 
     - name: Push changes
-      uses: ad-m/github-push-action@v0.9.0
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
