--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -74,7 +74,9 @@ jobs:
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
+        git checkout -b create/release
         git config pull.ff only  
+        git pull origin create/release
         git add package.json
         git commit -m "Update package.json to version $PACKAGE_VERSION"
 
@@ -82,3 +84,4 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: create/release
