--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -74,8 +74,7 @@ jobs:
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
-        git checkout -b create/release
-        git config pull.ff only  
+        git checkout create/release
         git pull origin create/release
         git add package.json
         git commit -m "Update package.json to version $PACKAGE_VERSION"
