--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -77,6 +77,7 @@ jobs:
         git checkout create/release
         git config pull.ff only  
         git pull origin create/release
+        git merge origin/create/release
         git add package.json
         git commit -m "Update package.json to version $PACKAGE_VERSION"
 
