--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -74,10 +74,8 @@ jobs:
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "GitHub Actions"
-        git checkout create/release
-        git config pull.ff only  
         git stash
-        git pull origin create/release
+        git pull origin create/release --rebase
         git stash apply
         git add package.json
         git commit -m "Update package.json to version $PACKAGE_VERSION"
