--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -71,18 +71,8 @@ jobs:
         jq ".version = \"$PACKAGE_VERSION\"" package.json > temp.json && mv temp.json package.json
 
     - name: Commit changes
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "GitHub Actions"
-        git stash
-        git pull origin create/release --rebase
-        git stash apply
-        git add package.json
-        git commit -m "Update package.json to version $PACKAGE_VERSION"
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: EndBug/add-and-commit@v9
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: create/release
+        message: "Update package.json to version $PACKAGE_VERSION"
+        tag_push: '--force'
 
