--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -39,19 +39,13 @@ jobs:
       - name: Run yarn build-package
         run: yarn build-package
 
-  create_release_pr:
-    name: Create release PR
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Create release PR
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Create release PR"
+          branch: create/release
+          base: main
+          title: "Build release - v${{ env.PACKAGE_VERSION }}"
+          labels: "release"
 
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "Create release PR"
-        branch: create/release
-        base: main
-        title: "Build release - v${{ env.PACKAGE_VERSION }}"
-        labels: "release"
