--- a/.github/workflows/update-package-version.yml
+++ b/.github/workflows/update-package-version.yml
@@ -2,13 +2,13 @@ name: Update package version
 
 on:
   pull_request:
-    types: [synchronize]
-    branches:
-      - create/release
+    types:
+      - labeled
 
 jobs:
   update_package_version:
     name: Update package version
+    if: ${{ contains(github.event.label.name, 'release') }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
