--- a/.github/workflows/update-package-version.yml
+++ b/.github/workflows/update-package-version.yml
@@ -1,9 +1,7 @@
 name: Update package version
 
 on:
-  pull_request:
-    types:
-      - labeled
+  pull_request
 
 jobs:
   update_package_version:
