--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   merge_pr:
     name: Merge PR to main
-    if: ${{ github.event.label.name == 'release' }}
+    if: ${{ github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'create/release' && github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
       - name: Create tag and release
