--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,23 +4,23 @@ on:
   pull_request:
     types: [closed]
 
-env:
-  PR_TAG: "v$(jq -r '.version' package.json)"
-
 jobs:
   merge_pr:
     name: Merge PR to main
     if: ${{ github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'create/release' && github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
+      - name: get-npm-version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@main
       - name: Create tag and release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.PR_TAG }}
-          release_name: ${{ env.PR_TAG }}
+          tag_name: "v${{ steps.package-version.outputs.current-version}}"
+          release_name: "v${{ steps.package-version.outputs.current-version}}"
           draft: false
           prerelease: false
           body: |
