--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -10,17 +10,19 @@ jobs:
     if: ${{ github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'create/release' && github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
-      - name: get-npm-version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@main
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Get version from package.json
+        id: get-version
+        run: echo "PACKAGE_VERSION=$(jq -r '.version' package.json)" >> $GITHUB_ENV
       - name: Create tag and release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: "v${{ steps.package-version.outputs.current-version}}"
-          release_name: "v${{ steps.package-version.outputs.current-version}}"
+          tag_name: "v${{ env.PACKAGE_VERSION }}"
+          release_name: "v${{ env.PACKAGE_VERSION }}"
           draft: false
           prerelease: false
           body: |
