--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Build Changelog
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v3
+        with:
+          fetch-depth: 0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Get version from package.json
@@ -30,4 +32,3 @@ jobs:
           release_name: "v${{ env.PACKAGE_VERSION }}"
           draft: false
           prerelease: false
-          body: ""
