--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Import GPG key
         run: |
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --import --batch --yes
-          echo "trust-model always" | gpg --command-fd 0 --edit-key "${{ secrets.GPG_KEY_ID }}" trust quit
+          echo "trust-model always" | gpg --batch --yes --command-fd 0 --edit-key "${{ secrets.GPG_KEY_ID }}" trust quit
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
