--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -50,17 +50,21 @@ jobs:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
           fingerprint: ${{ secrets.GPG_FINGERPRINT }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true   
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: "onsdesignsystem"
+          author_name: "ONS Design System"
           author_email: "ons.design.system@ons.gov.uk"
           message: "Update package.json to version $PACKAGE_VERSION"
           commit: "-S"
           tag_push: "--force"
           push: true
           new_branch: ""
+        env:
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
 
       - name: Create release PR
         uses: peter-evans/create-pull-request@v4
