--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -50,8 +50,10 @@ jobs:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.GPG_PASSPHRASE }}
           fingerprint: ${{ secrets.GPG_FINGERPRINT }}
+          git_config_global: true
           git_user_signingkey: true
-          git_commit_gpgsign: true   
+          git_commit_gpgsign: true
+          git_tag_gpgsign: true 
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
@@ -63,8 +65,6 @@ jobs:
           tag_push: "--force"
           push: true
           new_branch: ""
-        env:
-          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
 
       - name: Create release PR
         uses: peter-evans/create-pull-request@v4
