Use a different commit method

--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -45,6 +45,7 @@ jobs:
           jq ".version = \"$PACKAGE_VERSION\"" package.json > temp.json && mv temp.json package.json
 
       - name: Import GPG key
+        id: import-gpg
         uses: crazy-max/ghaction-import-gpg@v5
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
@@ -56,16 +57,12 @@ jobs:
           git_tag_gpgsign: true 
 
       - name: Commit changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: "ONS Design System"
-          author_email: "ons.design.system@ons.gov.uk"
-          message: "Update package.json to version $PACKAGE_VERSION"
-          commit: "-S"
-          tag_push: "--force"
-          push: true
-          new_branch: ""
-
+        run: git commit -S -m "Update package.json to version $PACKAGE_VERSION"
+        env:
+          GIT_AUTHOR_NAME: ${{ steps.import-gpg.outputs.name }}
+          GIT_AUTHOR_EMAIL: ${{ steps.import-gpg.outputs.email }}
+          GIT_COMMITTER_NAME: ${{ steps.import-gpg.outputs.name }}
+          GIT_COMMITTER_EMAIL: ${{ steps.import-gpg.outputs.email }}
       - name: Create release PR
         uses: peter-evans/create-pull-request@v4
         with:
