--- a/.github/workflows/build-release-pr.yml
+++ b/.github/workflows/build-release-pr.yml
@@ -56,20 +56,17 @@ jobs:
           git_commit_gpgsign: true
           git_tag_gpgsign: true 
 
-      - name: Add changes
-        run: git add .
-
       - name: Commit changes
-        run: git commit -S -m "Update package.json to version $PACKAGE_VERSION"
-        env:
-          GIT_AUTHOR_NAME: ${{ steps.import-gpg.outputs.name }}
-          GIT_AUTHOR_EMAIL: ${{ steps.import-gpg.outputs.email }}
-          GIT_COMMITTER_NAME: ${{ steps.import-gpg.outputs.name }}
-          GIT_COMMITTER_EMAIL: ${{ steps.import-gpg.outputs.email }}
+        uses: EndBug/add-and-commit@v9
+        with:
+          author_name: "ONS Design System"
+          author_email: "ons.design.system@ons.gov.uk"
+          message: "Update package.json to version $PACKAGE_VERSION"
+          commit: "-S"
+          tag_push: "--force"
+          push: true
+          new_branch: ""
 
-      - name: Push changes
-        run: git push 
-        
       - name: Create release PR
         uses: peter-evans/create-pull-request@v4
         with:
